// E-commerce Database Design

Table brand {
    brand_id int [pk, increment]
    name varchar
}

Table product_category {
    category_id int [pk, increment]
    name varchar
}

Table product {
    product_id int [pk, increment]
    name varchar
    brand_id int [ref: > brand.brand_id]
    category_id int [ref: > product_category.category_id]
    base_price decimal
}

Table product_image {
    image_id int [pk, increment]
    product_id int [ref: > product.product_id]
    url varchar
}

Table color {
    color_id int [pk, increment]
    name varchar
    hex_value varchar
}

Table size_category {
    size_category_id int [pk, increment]
    name varchar
}

Table size_option {
    size_option_id int [pk, increment]
    size_category_id int [ref: > size_category.size_category_id]
    label varchar
}

Table product_item {
    item_id int [pk, increment]
    product_id int [ref: > product.product_id]
    color_id int [ref: > color.color_id]
    size_option_id int [ref: > size_option.size_option_id]
    price decimal
    stock_quantity int
}

Table product_variation {
    variation_id int [pk, increment]
    product_id int [ref: > product.product_id]
    color_id int [ref: > color.color_id, null]
    size_option_id int [ref: > size_option.size_option_id, null]
}

Table attribute_type {
    attribute_type_id int [pk, increment]
    type_name varchar
}

Table attribute_category {
    attribute_category_id int [pk, increment]
    name varchar
}

Table product_attribute {
    attribute_id int [pk, increment]
    product_id int [ref: > product.product_id]
    attribute_type_id int [ref: > attribute_type.attribute_type_id]
    attribute_category_id int [ref: > attribute_category.attribute_category_id]
    name varchar
    value varchar
}
